# onepiece-chatbot

./: README.md  assistants.py  chainlit.md  pyproject.toml
src/: chains.py
src/prompts/: prompts.py
src/spider/: onepiece_crawler.py
src/utils/: etl.py  memory.py
